--- a/DBSCAN_Clustering.ipynb
+++ b/DBSCAN_Clustering.ipynb
@@ -815,7 +815,7 @@
     "                         subplot_kw={'xticks': (), 'yticks': ()})\n",
     "fig.suptitle('Sample Faces from the Dataset', fontsize=16, fontweight='bold')\n",
     "for i, (image, label, ax) in enumerate(zip(X_people, y_people, axes.ravel())):\n",
-    "    ax.imshow(image.reshape(image_shape), cmap='gray')\n",
+    "    ax.imshow(image.reshape(image_shape), cmap='gray', vmin=0, vmax=1)\n",
     "    ax.set_title(people.target_names[label].split()[-1], fontsize=11)\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -1010,7 +1010,8 @@
     "for i, (center, ax) in enumerate(zip(km_faces.cluster_centers_, axes.ravel())):\n",
     "    # Transform cluster center back to image space\n",
     "    face = pca.inverse_transform(center)\n",
-    "    ax.imshow(face.reshape(image_shape), cmap='gray', vmin=0, vmax=1)\n",
+    "    # FIX: Don't constrain vmin/vmax \u2014 let matplotlib auto-scale\n",
+    "    ax.imshow(face.reshape(image_shape), cmap='gray')\n",
     "    size = np.sum(labels_km_faces == i)\n",
     "    ax.set_title(f'Cluster {i} ({size} faces)', fontsize=11)\n",
     "\n",
@@ -1045,9 +1046,8 @@
     "    fig, axes = plt.subplots(1, 11, figsize=(22, 2.5),\n",
     "                             subplot_kw={'xticks': (), 'yticks': ()})\n",
     "    \n",
-    "    # Center\n",
-    "    axes[0].imshow(pca.inverse_transform(center).reshape(image_shape),\n",
-    "                   cmap='gray', vmin=0, vmax=1)\n",
+    "    # Center \u2014 FIX: no vmin/vmax constraint\n",
+    "    axes[0].imshow(pca.inverse_transform(center).reshape(image_shape), cmap='gray')\n",
     "    axes[0].set_title(f'Center {cluster_idx}', fontsize=9, color='blue', fontweight='bold')\n",
     "    \n",
     "    # 5 closest\n",
