--- a/DBSCAN_Clustering.ipynb
+++ b/DBSCAN_Clustering.ipynb
@@ -790,10 +790,15 @@
     "X_people = people.data[mask]\n",
     "y_people = people.target[mask]\n",
     "\n",
-    "# Scale pixel values to 0-1\n",
-    "X_people = X_people / 255.\n",
+    "# Check actual pixel range and normalize to 0-1 if needed\n",
+    "print(f'\\nPixel value range: {X_people.min():.2f} to {X_people.max():.2f}')\n",
+    "if X_people.max() > 1.0:\n",
+    "    X_people = X_people / 255.\n",
+    "    print('Scaled pixels to 0-1 range')\n",
+    "else:\n",
+    "    print('Pixels already in 0-1 range')\n",
     "\n",
-    "print(f'\\nAfter balancing: {X_people.shape[0]} images')\n",
+    "print(f'After balancing: {X_people.shape[0]} images')\n",
     "print(f'Features per image: {X_people.shape[1]} (pixels)')"
    ]
   },
@@ -815,7 +820,7 @@
     "                         subplot_kw={'xticks': (), 'yticks': ()})\n",
     "fig.suptitle('Sample Faces from the Dataset', fontsize=16, fontweight='bold')\n",
     "for i, (image, label, ax) in enumerate(zip(X_people, y_people, axes.ravel())):\n",
-    "    ax.imshow(image.reshape(image_shape), cmap='gray', vmin=0, vmax=1)\n",
+    "    ax.imshow(image.reshape(image_shape), cmap='gray')\n",
     "    ax.set_title(people.target_names[label].split()[-1], fontsize=11)\n",
     "plt.tight_layout()\n",
     "plt.show()"
