--- a/DBSCAN_Clustering.ipynb
+++ b/DBSCAN_Clustering.ipynb
@@ -66,7 +66,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 k-Means Failure Cases"
+    "### 1.2 Elbow Method \u2014 Choosing Optimal k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n1.2 Elbow Method \u2014 Choosing Optimal k\")\n\nX_elbow, _ = make_blobs(n_samples=300, centers=4, cluster_std=0.60, random_state=0)\n\ninertias = []\nsil_scores = []\nK_range = range(2, 11)\n\nfor k in K_range:\n    km = KMeans(n_clusters=k, random_state=0, n_init=10)\n    labels = km.fit_predict(X_elbow)\n    inertias.append(km.inertia_)\n    sil_scores.append(silhouette_score(X_elbow, labels))\n\nfig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n\nax1.plot(K_range, inertias, 'bo-', linewidth=2, markersize=8)\nax1.set_title('Elbow Method \u2014 Inertia', fontsize=14, fontweight='bold')\nax1.set_xlabel('Number of Clusters (k)')\nax1.set_ylabel('Inertia (Within-Cluster Sum of Squares)')\nax1.axvline(x=4, color='red', linestyle='--', label='Elbow at k=4')\nax1.legend()\n\nax2.plot(K_range, sil_scores, 'go-', linewidth=2, markersize=8)\nax2.set_title('Silhouette Score vs k', fontsize=14, fontweight='bold')\nax2.set_xlabel('Number of Clusters (k)')\nax2.set_ylabel('Silhouette Score')\nax2.axvline(x=4, color='red', linestyle='--', label='Best at k=4')\nax2.legend()\n\nplt.suptitle('How to Choose the Best k', fontsize=16, fontweight='bold', y=1.03)\nplt.tight_layout()\nplt.savefig('plot_1_2_elbow.png', dpi=150, bbox_inches='tight')\nplt.show()\n\nprint(f'Best silhouette score: {max(sil_scores):.3f} at k={list(K_range)[np.argmax(sil_scores)]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 k-Means Failure Cases"
    ]
   },
   {
@@ -130,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n2.3 Linkage Comparison (Ward vs Complete vs Average)\")\n\nX_agg2, y_agg2 = make_blobs(n_samples=150, centers=3, random_state=1)\n\nfig, axes = plt.subplots(1, 3, figsize=(18, 5))\nlinkage_types = ['ward', 'complete', 'average']\n\nfor ax, link_type in zip(axes, linkage_types):\n    agg = AgglomerativeClustering(n_clusters=3, linkage=link_type)\n    labels = agg.fit_predict(X_agg2)\n    ax.scatter(X_agg2[:, 0], X_agg2[:, 1], c=labels, s=50, cmap='viridis',\n               edgecolors='k', linewidth=0.3)\n    ax.set_title(f'Linkage: {link_type.capitalize()}', fontsize=14, fontweight='bold')\n    ax.set_xlabel('Feature 1')\n    ax.set_ylabel('Feature 2')\n\nplt.suptitle('Agglomerative Clustering \u2014 Linkage Comparison (k=3)',\n             fontsize=16, fontweight='bold', y=1.03)\nplt.tight_layout()\nplt.savefig('plot_2_3_linkage_comparison.png', dpi=150, bbox_inches='tight')\nplt.show()"
+    "# \u2500\u2500 2.3 Agglomerative on Larger Dataset + Linkage Comparison \u2500\u2500\nprint(\"\\n2.3 Linkage Comparison (Ward vs Complete vs Average)\")\n\n# Use ELONGATED (anisotropic) blobs \u2014 linkage choice matters here!\n# With well-separated round blobs all linkages give identical results.\nX_aniso_raw, _ = make_blobs(n_samples=150, centers=3, random_state=170)\ntransformation = [[0.60834549, -0.63667341], [-0.40887718, 0.85253229]]\nX_aniso = np.dot(X_aniso_raw, transformation)\n\nfig, axes = plt.subplots(1, 3, figsize=(18, 5))\nlinkage_types = ['ward', 'complete', 'average']\n\nfor ax, link_type in zip(axes, linkage_types):\n    agg = AgglomerativeClustering(n_clusters=3, linkage=link_type)\n    labels = agg.fit_predict(X_aniso)\n    ax.scatter(X_aniso[:, 0], X_aniso[:, 1], c=labels, s=50, cmap='viridis',\n               edgecolors='k', linewidth=0.3)\n    ax.set_title(f'Linkage: {link_type.capitalize()}', fontsize=14, fontweight='bold')\n    ax.set_xlabel('Feature 1')\n    ax.set_ylabel('Feature 2')\n\nplt.suptitle('Agglomerative Clustering \u2014 Linkage Comparison on Elongated Data (k=3)\\n'\n             'Notice: each linkage draws different boundaries!',\n             fontsize=16, fontweight='bold', y=1.05)\nplt.tight_layout()\nplt.savefig('plot_2_3_linkage_comparison.png', dpi=150, bbox_inches='tight')\nplt.show()"
    ]
   },
   {
