--- a/DBSCAN_Clustering.ipynb
+++ b/DBSCAN_Clustering.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \ud83d\udd2c Unsupervised Learning \u2014 Clustering Algorithms\n\n**Course:** CSC582 \u2014 Data Warehousing and Mining | King Saud University\n\n**Reference:** Introduction to Machine Learning with Python \u2014 Chapter 3 (pp. 168\u2013207)"
+    "# \ud83d\udd2c Unsupervised Learning \u2014 Clustering Algorithms\n\n**Course:** CSC564 \u2014 ML | King Saud University\n\n**Reference:** Introduction to Machine Learning with Python \u2014 Chapter 3 (pp. 168\u2013207)"
    ]
   },
   {
