--- a/DBSCAN_Clustering.ipynb
+++ b/DBSCAN_Clustering.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\" + \"=\" * 65)\nprint(\"2.1 Basic Agglomerative Clustering\")\nprint(\"=\" * 65)\n\nX_agg, y_agg = make_blobs(n_samples=8, centers=3, random_state=1)\n\nagg = AgglomerativeClustering(n_clusters=3, linkage='ward')\nlabels_agg = agg.fit_predict(X_agg)\n\nplt.figure(figsize=(6, 5))\nplt.scatter(X_agg[:, 0], X_agg[:, 1], c=labels_agg, s=100, cmap='viridis',\n            edgecolors='k', linewidth=0.5)\n\n# Add point labels\nfor i, (x, y_coord) in enumerate(X_agg):\n    plt.text(x + 0.1, y_coord + 0.1, str(i), fontsize=12, fontweight='bold')\n\nplt.title(\"Agglomerative Clustering (3 Clusters) with Point Labels\",\n          fontsize=14, fontweight='bold')\nplt.xlabel(\"Feature 1\")\nplt.ylabel(\"Feature 2\")\nplt.tight_layout()\nplt.savefig('plot_2_1_agglomerative.png', dpi=150, bbox_inches='tight')\nplt.show()\n\nprint(f'Cluster labels: {labels_agg}')"
+    "# \u2500\u2500 2.1 Basic Agglomerative Clustering \u2500\u2500\nprint(\"\\n\" + \"=\" * 65)\nprint(\"2.1 Basic Agglomerative Clustering\")\nprint(\"=\" * 65)\n\nX_agg, y_agg = make_blobs(random_state=1)\n\nagg = AgglomerativeClustering(n_clusters=3, linkage='ward')\nlabels_agg = agg.fit_predict(X_agg)\n\nplt.figure(figsize=(6, 5))\nplt.scatter(X_agg[:, 0], X_agg[:, 1], c=labels_agg, s=100, cmap='viridis',\n            edgecolors='k', linewidth=0.5)\n\nplt.title(\"Agglomerative Clustering\", fontsize=14, fontweight='bold')\nplt.xlabel(\"Feature 1\")\nplt.ylabel(\"Feature 2\")\nplt.tight_layout()\nplt.savefig('plot_2_1_agglomerative.png', dpi=150, bbox_inches='tight')\nplt.show()\n\nprint(f'Cluster labels: {labels_agg}')"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n2.2 Dendrogram (Ward Linkage)\")\n\nlinked = linkage(X_agg, method='ward')\n\nplt.figure(figsize=(8, 5))\ndendrogram(linked)\nplt.title(\"Dendrogram (Ward Linkage)\", fontsize=14, fontweight='bold')\nplt.xlabel(\"Data Points\")\nplt.ylabel(\"Distance\")\nplt.tight_layout()\nplt.savefig('plot_2_2_dendrogram.png', dpi=150, bbox_inches='tight')\nplt.show()"
+    "# \u2500\u2500 2.2 Dendrogram \u2500\u2500\nprint(\"\\n2.2 Dendrogram (Ward Linkage)\")\n\nlinked = linkage(X_agg, method='ward')\n\nplt.figure(figsize=(9, 6))\ndendrogram(linked)\nplt.title(\"Dendrogram with (Ward)\", fontsize=14, fontweight='bold')\nplt.xlabel(\"Data Points\")\nplt.ylabel(\"Distance\")\nplt.tight_layout()\nplt.savefig('plot_2_2_dendrogram.png', dpi=150, bbox_inches='tight')\nplt.show()"
    ]
   },
   {
